Static analysis code clean up